# vibewarz

./: .gitattributes  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.changeset/: README.md  curve-blast-you-color.md  initial-game-ui.md  replay-fullscreen.md  replay-player-names.md  vibelords-aspect-ratios.md
.github/workflows/: ci.yml  release-npm.yml  release.yml
docs/: PROTOCOL.md  QUICKSTART.md  WRITING_A_BOT.md
docs/games/: blast.md  curve.md  poker.md  vibelords.md
games/: pyproject.toml
games/src/vibewarz_games/: __init__.py
games/src/vibewarz_games/_core/: base.py
games/src/vibewarz_games/blast/: game.py
games/src/vibewarz_games/curve/: game.py
games/src/vibewarz_games/poker/: game.py
games/src/vibewarz_games/rock_paper_scissors/: __init__.py  game.py
games/src/vibewarz_games/vibelords/: game.py
games/tests/: test_blast.py  test_curve.py  test_poker.py  test_rock_paper_scissors.py
sample-bots/: README.md  blast_random.py  curve_wall_avoid.py  poker_random.py  rock_paper_scissors_human.py  rock_paper_scissors_random.py  vibelords_counter.py  vibelords_random.py
sdk-python/: README.md  pyproject.toml
sdk-python/src/vibewarz/: __init__.py  bot.py  cli.py  client.py  helpers.py  play_local.py  replay_server.py  runner.py  state_accumulator.py
sdk-python/src/vibewarz/examples/: straight_curve.py  wall_avoid_curve.py
sdk-python/src/vibewarz/games/: __init__.py  base.py  blast.py  curve.py  poker.py  rock_paper_scissors.py  vibelords.py
sdk-python/src/vibewarz/protocol/: messages.py  replay.py
sdk-python/src/vibewarz/viewer_dist/: index.html
sdk-python/src/vibewarz/viewer_dist/assets/: index.css  index.js
sdk-python/tests/: test_client.py  test_replay.py  test_state_accumulator.py  test_typed_bots.py
viewer/: CHANGELOG.md  index.html  package.json  tsconfig.json  vite.config.ts
viewer/src/: main.tsx
