[project]
name = "vibewarz-workspace"
version = "0.1.0"
description = "vibewarz OSS — workspace root"
requires-python = ">=3.11"
# Pull the workspace members into the root env so `uv sync` installs
# vibewarz + vibewarz-games (via the tool.uv.sources mapping below)
# rather than just leaving the root with no deps.
dependencies = ["vibewarz", "vibewarz-games"]

[project.optional-dependencies]
# Workspace-level dev tools. `uv sync --all-extras` in CI picks these
# up so `pytest` is on PATH; member packages also declare their own
# `dev` extras (with the same pytest pin) for standalone installs.
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.uv.workspace]
members = ["games", "sdk-python"]

[tool.uv.sources]
vibewarz-games = { workspace = true }
vibewarz = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# typer.Argument / typer.Option in argument defaults is the idiomatic
# typer pattern (`def cmd(x: Path = typer.Argument(...))`); the
# alternative is verbose Annotated[…] wrapping. Allowlist them so B008
# doesn't fire on the CLI module.
extend-immutable-calls = ["typer.Argument", "typer.Option"]

[tool.pytest.ini_options]
testpaths = ["games/tests", "sdk-python/tests"]
asyncio_mode = "auto"
