[project]
name = "vibewarz-games"
version = "0.2.2"
description = "vibewarz game engines — pure Python implementations of Curve, Poker, Blast"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["game", "bot", "arena", "vibewarz"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
]
dependencies = [
  "pokerkit>=0.7,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibewarz_games"]
