[project]
name = "vibewarz"
version = "0.6.2"
description = "Python SDK for writing vibewarz bots — play live or locally"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["bot", "game", "arena", "vibewarz", "ai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Games/Entertainment",
]
dependencies = [
  "websockets>=12.0",
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.7",
  "httpx>=0.27",
  "vibewarz-games>=0.2.5,<0.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
vibewarz = "vibewarz.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The bundled React replay viewer (../viewer/ build output, committed under
# src/vibewarz/viewer_dist/) ships in the wheel automatically: hatchling
# includes every non-VCS-ignored file inside the package dir, not just *.py.
# So `vibewarz replay --watch` finds the assets via importlib.resources after
# a plain `pip install vibewarz`, no Node toolchain required. CI freshness
# check guards against the committed bundle drifting from the
# @vibewarz/game-ui source — rebuild with `pnpm -F viewer build`.
[tool.hatch.build.targets.wheel]
packages = ["src/vibewarz"]

# Mirror the package into the sdist so a source install
# (`pip install vibewarz --no-binary :all:`) builds a wheel from a tarball that
# still contains the viewer.
[tool.hatch.build.targets.sdist]
include = [
  "src/vibewarz/**",
  "README.md",
  "pyproject.toml",
]
